# SpaceTimeMC

./: .gitignore  Cargo.toml  readme.md
macros/: Cargo.toml
macros/src/: lib.rs
proxy/: Cargo.toml  autogen
proxy/src/: actor_ref.rs  err.rs  lib.rs  main.rs
proxy/src/client_actor/: configuration.rs  handshake.rs  login.rs  mc_socket.rs  mod.rs  net.rs  status.rs  stream_actor.rs
proxy/src/module_bindings/: mod.rs
proxy/src/protocol/: mod.rs  status_request.rs
proxy/src/server_actor/: actor.rs  connection_cache.rs  key_store.rs  mod.rs
server/: Cargo.toml  publish
server/src/: lib.rs  player.rs  types_support.rs
server/src/server/: config.rs  mod.rs
