[package]
name = "spacetimemc-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spacetimemc-proxy"
path = "src/main.rs"

[dependencies]
spacetimedb-sdk = "1.1.1"

[dependencies.pumpkin-protocol]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"
package = "pumpkin-protocol"
