[package]
name = "spacetimemc-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spacetimemc-proxy"
path = "src/main.rs"

[dependencies]
spacetimedb-sdk = "1.1.1"

log.workspace = true
crossbeam = "0.8"
uuid = { version = "1.16", features = ["serde", "v3", "v4"] }
tokio = { version = "1.45", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
    "fs",
] }
rayon = "1.10"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"

# config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bytes = "1.10"

# Keep outdated for now, dependencies use older version
rand = "0.8"

num-bigint = "0.4"

# Console line reading
rustyline-async = "0.4.6"

# encryption
rsa = { version = "0.9", features = ["sha1"] }
rsa-der = "0.3"

# authentication
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "macos-system-configuration",
    "rustls-tls",
] }

sha1 = "0.10"

# velocity en
hmac = "0.12"
sha2 = "0.10"

base64 = "0.22"

# icon loading
png = "0.17"

# logging
simplelog = { version = "0.12.2", features = ["ansi_term"] }

# Remove time in favor of chrono?
time = "0.3"

chrono = { version = "0.4", features = ["serde"] }

# plugins
libloading = "0.8"
bitflags = "2.9.1"
rustc-hash = "2.1.1"

# Task handling
tokio-util = { version = "0.7.15", features = ["rt", "codec", "net"] }
tokio-stream = "0.1.17"
env_logger = "0.11.8"


[dependencies.pumpkin]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-config]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-data]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-inventory]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-macros]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-nbt]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-protocol]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-registry]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-util]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.pumpkin-world]
git = "https://github.com/Pumpkin-MC/Pumpkin"
rev = "3a803af37f1f4a974d135d3213ae56746900e132"

[dependencies.ferrumc-net-codec]
git = "https://github.com/ferrumc-rs/ferrumc"
rev = "32491371b0adf844b85a4523e7373a33db9db762"

[build-dependencies]
git-version = "0.3"

# This makes it so the entire project doesn't recompile on each build on linux.
[target.'cfg(target_os = "windows")'.build-dependencies]
tauri-winres = "0.3"
